--- a/build.gradle
+++ b/build.gradle
@@ -16,27 +16,17 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'war'
-/*
-plugins {
-    // Apply the java-library plugin to add support for Java Library
-    id 'java-library'
-}*/
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-security')
+    //compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-validation')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-mail')
 	
-	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.5.11.RELEASE'
-	
 	compile group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '1.5.11.RELEASE'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '1.5.11.RELEASE'
-	// https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2
-	compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.2.2.RELEASE'
-	
-	compile group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.0.9.RELEASE'
+	//compile group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.0.9.RELEASE'
 	
 	compile group: 'com.zaxxer', name: 'HikariCP', version: '2.7.8'
 	compile group: 'org.hibernate', name: 'hibernate-hikaricp', version: '5.2.13.Final'
@@ -45,36 +35,25 @@ dependencies {
 	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
 	compile group: 'org.apache.tomcat', name: 'tomcat-servlet-api', version: '9.0.7'
 	compile group: 'org.modelmapper', name: 'modelmapper', version: '1.1.3'
-	compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.5'
 	compile 'io.springfox:springfox-swagger-ui:2.8.0'
 	compile "io.springfox:springfox-swagger2:2.8.0"
 	compile group: 'org.json', name: 'json', version: '20180130'
-	compile group: 'com.google.maps', name: 'google-maps-services', version: '0.2.8'
 	compile group: 'commons-io', name: 'commons-io', version: '2.6'
 	compile group: 'commons-collections', name: 'commons-collections', version: '3.2.2'
-	compile group: 'commons-digester', name: 'commons-digester', version: '2.1'
 	compile group: 'org.apache.commons', name: 'commons-digester3', version: '3.0'
 	compile 'org.springframework.boot:spring-boot-starter-web'
 	compile 'org.springframework.boot:spring-boot-starter-log4j2'
-	// https://mvnrepository.com/artifact/postgresql/postgresql
-	compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
+	
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.security:spring-security-test')
 	compile group: 'org.freemarker', name: 'freemarker', version: '2.3.28'
-	// https://mvnrepository.com/artifact/postgresql/postgresql
-	compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
+	compile 'mysql:mysql-connector-java'
 	
-	compile 'com.amazonaws:aws-java-sdk-s3'
   	testCompile group: 'junit', name: 'junit', version: '4.11'
-  	
-  	// https://mvnrepository.com/artifact/net.minidev/json-smart
 	compile("net.minidev:json-smart:2.2.1")
 }
 
-// In this section you declare where to find the dependencies of your project
 repositories {
-    // Use jcenter for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
     jcenter()
 }
 task initSourceFolders {
